fixed button styling to fix bug on mobile display:

--- a/src/CoffeeShopsIndex.scoped.scss
+++ b/src/CoffeeShopsIndex.scoped.scss
@@ -9,13 +9,6 @@ form {
   max-width: 300px;
 }
 
-.search-button {
-  max-width: 20px;
-  max-height: 48px;
-  padding: 10px;
-  margin: 10px;
-}
-
 .fa-magnifying-glass:hover {
   color:  gray;
 }
